@@ -4,8 +4,6 @@ package com.yahoo.vespa.model.application.validation.change;
 import com.yahoo.config.model.api.ConfigChangeRestartAction;
 import com.yahoo.config.model.api.ServiceInfo;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -15,16 +13,24 @@ import java.util.List;
  */
 public class VespaRestartAction extends VespaConfigChangeAction implements ConfigChangeRestartAction {
 
+    private final boolean ignoreForInternalRedeploy;
+
     public VespaRestartAction(String message) {
-        super(message, new ArrayList<>());
+        this(message, List.of());
     }
 
     public VespaRestartAction(String message, ServiceInfo service) {
-        super(message, Collections.singletonList(service));
+        this(message, List.of(service));
+    }
+
+    public VespaRestartAction(String message, ServiceInfo services, boolean ignoreForInternalRedeploy) {
+        super(message, List.of(services));
+        this.ignoreForInternalRedeploy = ignoreForInternalRedeploy;
     }
 
     public VespaRestartAction(String message, List<ServiceInfo> services) {
         super(message, services);
+        this.ignoreForInternalRedeploy = false;
     }
 
     @Override
@@ -32,4 +38,25 @@ public class VespaRestartAction extends VespaConfigChangeAction implements Confi
         return new VespaRestartAction(newMessage, newServices);
     }
 
+    @Override
+    public boolean ignoreForInternalRedeploy() {
+        return ignoreForInternalRedeploy;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        if (!super.equals(o)) return false;
+
+        VespaRestartAction that = (VespaRestartAction) o;
+        return ignoreForInternalRedeploy == that.ignoreForInternalRedeploy;
+    }
+
+    @Override
+    public int hashCode() {
+        int result = super.hashCode();
+        result = 31 * result + (ignoreForInternalRedeploy ? 1 : 0);
+        return result;
+    }
 }
